Added new navbar and better messages

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -33,7 +33,7 @@
             
             <div class="container col-md-12">
                 
-              <table id="activitytable" class="table table-hover table-bordered table-condensed">
+              <table id="activitytable" class="table table-hover table-bordered table-condensed table-sm">
                 <thead class="thead-light">
                   <tr>
                     <th><p class="link"><a class="UP" onclick="sortActivityTableByColumn(0,true)" href="javascript:void(0);">Activity Type</a></p></th>
