Modal for joining groups

--- a/app/views/group/new.html.erb
+++ b/app/views/group/new.html.erb
@@ -26,7 +26,7 @@
             </div>
             <br>
             <div class="gradient-buttons">
-                <Button type="submit" class='btn center-block btn-lg btn-primary'>Log Data</Button>
+                <Button id="groupSubmitButton" type="submit" class='btn center-block btn-lg btn-primary'>Log Data</Button>
             </div>
             
             <% end %>
