--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -67,7 +67,7 @@
                                             <div class="modal-body">
                                                 <H3><%= group.description %></H3>
                                                 <%= form_for group, :url => {:action => 'join', :id => group.id} do |g| %>
-                                                    <p>Enter Group Password to Join: <%= g.password_field 'password'%></p>
+                                                    <p>Enter Group Password to Join: <%= g.password_field 'password', :id => "group_password_#{group.id}"%></p>
                                                     <br>
                                                     <button type="submit" class='btn btn-lg btn-primary'>Join Group</button>
                                                 <% end %>
@@ -92,55 +92,52 @@
         </div>
     </div>
 </div>
+<div class="gradient-buttons text-center">
+    <button type="button" class="btn btn-large btn-primary" data-toggle="modal" data-target="#newGroupModal">Create New Group</button>
+</div>
+
 
 <div id="newGroupModal" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
     
           <div class="modal-header">
-            <h4 class="modal-title">Log New Activity</h4>
+            <h4 class="modal-title">Create New Group</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
     
           <div class="modal-body">
-                <% if current_user.groupid == nil %>
-                    <p class="warn">
-                        You are currently not a member of any group. Activities that you 
-                        log now will not be available to you once you join a group.
-                    </p>
-                    <br>
-                <% end %>
-                <%= form_tag onsubmit="submitNewActivity()" do %>
-                    <div class='activitypanel'>
-                        <div class="activity_feature">
-                            <p><label for = "activity_type">Select Activity Type: </label></p>
-                            <div class="form-group">
-                                <select id="activities_actid" class="form-control">
-                                    <% @act_types.each do |actType| %>
-                                        <%= content_tag :option, :name => actType.name, :value => actType.id, :class => "activityOption" do%>
-                                            <%= actType.name %>
-                                        <% end %>
-                                    <% end %>
-                                </select>
+                <div class='container'>
+                    <div class='groupcontainer'>
+                        <%= form_tag :action => 'create' do %>
+                            <div class='form-group'>
+                                <p><label for = 'group_name'>Enter Group Name: </label></p>
+                                <em>(Must be between <%= @minimumNameLength %> and <%= @maximumNameLength %> characters)</em><br>
+                                <%= text_field 'group', 'name', :maxlength => @maximumNameLength, :minlength => @minimumNameLength, :size => 50, :onkeyup => 'verifyNewGroup()', :required => true, :class => "form-control" %>
                             </div>
-                        </div>
-                        <div class="activity_feature">
-                            <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
-                            <%= number_field 'activities', 'duration', :required => true, :step=>'any', :class => "form-control" %>
-                        </div>
-                        <br>
-                        <br>
-                        <div class="activity_feature">
-                            <p><label for = "activity_user">Activity will be recorded under the name of <%= current_user.first_name %> <%= current_user.last_name %></label></p>
-                            <%= hidden_field :activities, :userid, :value => current_user.id %>
-                        </div>
-                        <br>
+                            <div class='form-group'>
+                                <p id='groupDescriptionAlert' class='AlertMessage'>Group description cannot be the same as the group name.</p>
+                                <p><label for = 'group_description'>Enter Group Description: </label></p>
+                                <em>(Must be between <%= @minimumDescriptionLength %> and <%= @maximumDescriptionLength %> characters)</em><br>
+                                <%= text_field 'group', 'description', :maxlength => @maximumDescriptionLength, :minlength => @minimumDescriptionLength, :size => 50, :onkeyup => 'verifyNewGroup()', :required => true, :class => "form-control" %>
+                            </div>
+                            <div class='form-group'>
+                                <p><label for = 'group_password'>Enter Group Password</label></p>
+                                <%= password_field 'group', 'password', :size =>  @smallerMaximumLength, :onkeyup => 'verifyNewGroup()', :required => true, :class => "form-control" %>
+                            </div>
+                            <div class='form-group'>
+                                <p id='groupPasswordAlert' class='AlertMessage'>Passwords do not match</p>
+                                <p><label for = 'group_password_confirmation'>Confirm Password</label></p>
+                                <%= password_field 'group', 'password_confirmation', :size => @smallerMaximumLength, :onkeyup => 'verifyNewGroup()', :required => true, :class => "form-control" %>
+                            </div>
+                            <br>
+                            <div class="gradient-buttons">
+                                <button type="submit" class='btn center-block btn-lg btn-primary' id="group_submit_button" disabled>Create New Group</button>
+                            </div>
+                        
+                        <% end %>
                     </div>
-                    <br>
-                    <div class="gradient-buttons">
-                        <button type="submit" onclick="submitNewActivity()" data-dismiss="modal" class='btn center-block btn-lg btn-primary'>Log Data</Button>
-                    </div>
-                <% end%>
+                </div>
           </div>
     
           <div class="modal-footer">
