--- a/app/views/activity_type/edit.html.erb
+++ b/app/views/activity_type/edit.html.erb
@@ -15,7 +15,7 @@
             <%= form_for @actType, :url => {:action => 'update', :id => @actType.id} do |a| %>
                 <p>Activity Type Name: <%= a.text_field 'name', :value => @actType.name, :maxlength => 50, :minlength => 5, :required => true %></p>
                 <p>Activity Type Score: <%= a.number_field 'score', :value => @actType.score, :step => 'any', :required => true %></p>
-                <%= image_submit_tag "button_save_changes.png", :class => 'submitbutton' %>
+                <button type="submit" class="btn btn-primary btn-large">Save Changes</button>
             <% end %>
         </div>
     </div>
