--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -12,14 +12,16 @@
     <br>
     <%= image_tag "fgroup.png", :class => "rounded mx-auto d-block" %>
     <br>
-    <h4 class="text-center"><a href="javascript:void(0)" data-toggle="collapse" data-target="#quickCollapse">Quickstart Guide</a></h4>
+    <br>
+    <div class="gradient-buttons justify-content-center block-center text-center">
+        <button type="button" class="btn btn-large btn-info block-center" data-toggle="collapse" data-target="#quickCollapse">Quickstart Guide</button>
+    </div>
+    <br>
     <div id="quickCollapse" class="collapse">
         <div id="quickAccordian">
             <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubOne">
-                        Joining a Group
-                    </a>
+                <div class="card-header text-center" data-target="#collapseSubOne" data-toggle="collapse">
+                    <H3>Joining a Group</H3>
                 </div>
                 <div id="collapseSubOne" class="collapse" data-parent="#quickAccordian">
                     <div class="card-body">
@@ -34,10 +36,8 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubTwo">
-                        Creating a Group
-                    </a>
+                <div class="card-header text-center" data-target="#collapseSubTwo" data-toggle="collapse">
+                    <H3>Create a Group</H3>
                 </div>
                 <div id="collapseSubTwo" class="collapse" data-parent="#quickAccordian">
                     <div class="card-body">
@@ -55,10 +55,8 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubThree">
-                        Creating an Activity Type
-                    </a>
+                <div class="card-header text-center" data-target="#collapseSubThree" data-toggle="collapse">
+                    <H3>Creating an Activity Type</H3>
                 </div>
                 <div id="collapseSubThree" class="collapse" data-parent="#quickAccordian">
                     <div class="card-body">
@@ -81,10 +79,8 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-header">
-                    <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubFour">
-                        Logging an Activity
-                    </a>
+                <div class="card-header text-center" data-target="#collapseSubFour" data-toggle="collapse">
+                    <H3>Logging an Activity</H3>
                 </div>
                 <div id="collapseSubFour" class="collapse" data-parent="#quickAccordian">
                     <div class="card-body">
@@ -120,10 +116,8 @@
     <br>
     <div id="quickAccordian">
         <div class="card">
-            <div class="card-header">
-                <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubOne">
-                    What is Doing Together?
-                </a>
+            <div class="card-header text-center" data-target="#collapseSubOne" data-toggle="collapse">
+                <H3>What is Doing Together?</H3>
             </div>
             <div id="collapseSubOne" class="collapse" data-parent="#quickAccordian">
                 <div class="card-body">
@@ -138,10 +132,13 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header">
+            <div class="card-header text-center">
                 <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubTwo">
                     How does it work?
                 </a>
+            </div>
+            <div class="card-header text-center" data-target="#collapseSubTwo" data-toggle="collapse">
+                <H3>How does it work?</H3>
             </div>
             <div id="collapseSubTwo" class="collapse" data-parent="#quickAccordian">
                 <div class="card-body">
@@ -159,10 +156,8 @@
             </div>
         </div>
         <div class="card">
-            <div class="card-header">
-                <a class="collapsed card-link" data-toggle="collapse" href="#collapseSubThree">
-                    What if I do not want to be part of a group?
-                </a>
+            <div class="card-header text-center" data-target="#collapseSubThree" data-toggle="collapse">
+                <H3>What if I do not want to be part of a group?</H3>
             </div>
             <div id="collapseSubThree" class="collapse" data-parent="#quickAccordian">
                 <div class="card-body">
