--- a/app/views/group/index.html.erb
+++ b/app/views/group/index.html.erb
@@ -5,15 +5,15 @@
             <% if @groups.blank? %>
                 <H3>There are currently no groups.</H3>
             <% else %>
-                <center>
+                <div class="justify-content-center text-center data-center">
                     <input type="text" id="groupSearchInput" class="searchBar" onkeyup="groupSearch()" placeholder="Search for a group..." title="Search here">
                     <select id='groupSearchSelect' class='selectBar' onchange="groupSearch()">
                         <option>Group Name</option>
                         <option>Group Description</option>
                         <option>Number of Members</option>
                     </select>
-                </center>
-                <table id="grouptable" class="table table-hover table-bordered table-condensed">
+                </div>
+                <table id="grouptable" class="table table-hover table-bordered table-condensed text-center">
                     <thead class="thead-light">
                         <tr>
                             <th><a class="UP" onclick="sortGroupTableByColumn(0,'grouptable',true)" href="javascript:void(0);">Group Name</a></th>
@@ -22,13 +22,13 @@
                             <th>          </th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody class="justify-content-center text-center">
                         <% @groups.each do |group| %>
                             <% if group.id == current_user.groupid %>
                                 <tr class="curgroup">
                                     <% if group.adminid == current_user.id %>
                                         <td class="name"><%= link_to group.name, {:action => 'edit', :id => group.id} %></td>
-                                        <td><%= group.description %></td>
+                                        <td class="text"><%= group.description %></td>
                                         <td><%= group.numMembers %></td>
                                         <td>
                                             <%= button_to "Delete", {:controller => 'group', :action =>'delete', :id => group.id}, :method => 'delete', :data => {:confirm => "Are you sure you want to delete #{group.name}?"}, :type => 'button', :class => 'btn btn-lg btn-danger' %>
