--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -15,7 +15,10 @@
             <%else%>
                 <H3>Activities will appear here when you or someone in your group adds one.</H3>
             <%end%>
+            <div id="activityLogContainer" style="display: none;">
         <% else %>
+            <div id="activityLogContainer">
+        <% end %>
             <div class="input-group mb-3 justify-content-center">
                 <input type="text" id="activitySearchInput" class="searchBar" onkeyup="activitySearch()" placeholder="Search for an entry..." title="Search here">
                 <div class="input-group-append">
@@ -95,7 +98,7 @@
             </ul>
             <br>
             </table>
-        <% end %>
+        </div>
     </div>
 </div>
 <div class="gradient-buttons text-center">
@@ -110,7 +113,12 @@
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
     
-          <div class="modal-body">
+          <div class="modal-body justify-content-center text-center block-center data-center">
+            <% if @act_types.blank? %>
+                <H4 style="color: red;">There are currently no accessabile activity types.</H4>
+                <br>
+                <H6><a href="/activity_type/index">Click here</a> to view the Activity Types page.</H6>
+            <% else %>
                 <% if current_user.groupid == nil %>
                     <p class="warn">
                         You are currently not a member of any group. Activities that you 
@@ -148,12 +156,13 @@
                     <div class="gradient-buttons">
                         <button type="submit" onclick="submitNewActivity()" data-dismiss="modal" class='btn center-block btn-lg btn-primary'>Log Data</Button>
                     </div>
-                <% end%>
-          </div>
-    
-          <div class="modal-footer">
+                <% end %>
+              </div>
+            <% end %>
+        </div>
+        <div class="modal-footer">
             <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
-          </div>
+        </div>
 
     </div>
   </div>
