--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 <% else %>
   <% @sty = "" %>
 <% end %>
-<%= content_tag :nav, :class => "navbar bg-light navbar-expand-md fixed-top", :style => @sty do %>
+<%= content_tag :nav, :class => "navbar bg-info navbar-expand-md fixed-top", :style => @sty do %>
   <a class="navbar-brand" >
     <%= link_to (image_tag('doing_together.png')), '/application/index', :class => 'title', :alt => "logo"%>
   </a>
